# geneos-toolkit-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.forge/improve/: fix-crate-metadata.md
.forge/intake/: add-zeroize-support.md  baseline-test-coverage.md  fix-ci-pipeline.md  fix-crate-metadata.md  fix-protocol-injection.md  harden-crypto-module.md  security-hardening.md
.forge/plans/: add-zeroize-support.md  harden-crypto-module.md
.forge/plans/done/: fix-crate-metadata.md
.forge/research/: add-zeroize-support.md  harden-crypto-module.md
.forge/specs/: add-zeroize-support.md  harden-crypto-module.md
.forge/specs/done/: fix-crate-metadata.md
.forge/steps/done/fix-crate-metadata/: objective.md
.forge/steps/harden-crypto-module/: 01-opaque-decrypt-errors.md  02-harden-parse-key-file.md  03-redact-debug-salt-comment.md  04-update-and-add-tests.md  objective.md
.forge/tasks/: add-zeroize-support.yaml  baseline-test-coverage.yaml  fix-ci-pipeline.yaml  fix-crate-metadata.yaml  fix-protocol-injection.yaml  harden-crypto-module.yaml  security-hardening.yaml  upgrade-checkout-action-v6.yaml
.forge/tasks/done/: fix-crate-metadata.yaml
.github/workflows/: deploy.yaml
examples/: basic_dataview.rs  dataview_with_commas_in_cells.rs  dataview_with_multiple_headlines.rs  files_iter.rs  iterative_rows.rs  readme_iterative_rows.rs  row_builder.rs
proptest-regressions/: dataview.txt
src/: dataview.rs  env.rs  lib.rs  secure_env.rs
tests/: examples_test.rs
