[package]
name = "geneos-toolkit"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Johan Thorén <jthoren@itrsgroup.com>"]
readme = "README.md"
repository = "https://github.com/ITRS-Group/geneos-toolkit-rs"
keywords = ["geneos", "monitoring"]
categories = ["command-line-utilities"]
description = "Rust library for building Geneos Toolkit compatible applications"

[[example]]
name = "basic_dataview"
path = "examples/basic_dataview.rs"

[features]
default = []
secure-env = ["aes", "cbc", "cipher", "hex"]

[dependencies]
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", features = ["alloc"], optional = true }
cipher = { version = "0.4.4", optional = true }
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
chrono = "0.4.40"
hostname = "0.4.0"
temp-env = "0.3.6"
tempfile = "3.19.1"
